--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,13 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+
+		<dependency>  
+    		<groupId>org.springframework.boot</groupId>  
+    		<artifactId>spring-boot-starter-tomcat</artifactId>  
+    		<scope>provided</scope><!-- this line must be present-->  
+		</dependency>
+
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
