--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,14 @@
 
 		<dependency>
 			<groupId>com.microsoft.azure</groupId>
+			<artifactId>azure-maven-plugins</artifactId>
+			<version>1.26.0</version>
+			<type>pom</type>
+		</dependency>
+
+
+		<dependency>
+			<groupId>com.microsoft.azure</groupId>
 			<artifactId>azure</artifactId>
 			<version>1.41.4</version>
 		</dependency>
